frontend tweeks